added image function for my own questions

--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
 	<div class="row">
 		<div class="col-sm-offset-3 col-sm-6" id="main">
 
-
-
 <!-- What Trivia page looks like -->
 		<!-- 	<p id="question">
 				Question
@@ -83,7 +81,9 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-sm-offset-3 col-md-6" id="image">
+<img src ="assets/images/manchineel-trees.jpg">
+
 		</div>
 	</div>
 </div>
