--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="assets/css/reset.css" rel="stylesheet">
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://bootswatch.com/4/spacelab/bootstrap.min.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+
     <link href="assets/css/style.css" rel="stylesheet">
 	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
 
