--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
 
   </head>
-  <body>
+  <body class="bg">
+
 
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	  <script type="text/javascript src="assets/javascript"></script>
